--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
 
 .hero-image img {
     width: 100%;
-    max-width: 600px;
+    max-width: 660px;
     height: auto;
     border-radius: 5px;
     mix-blend-mode: multiply;
@@ -358,7 +358,7 @@ body {
   line-height: 1.8;
   color: #555;
   text-align: center;
-  max-width: 800px;
+  max-width: 1016px;
   margin: 0 auto;
 }
 
@@ -907,6 +907,9 @@ body {
     transition: all 0.3s ease;
     text-align: center;
     min-width: 200px;
+    border: none;
+    margin: 10px;
+    
     
 }
 
@@ -1385,7 +1388,7 @@ body {
 /* Footer Styles */
 .footer {
   /* background-color: #55518E; */
-  background-color: rgb(63, 64, 60);
+  background-color: #55518E;
   color: white;
   padding: 3rem 0 0;
   font-family: 'Cal Sans', sans-serif;
@@ -1394,7 +1397,7 @@ body {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
