--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Oswald:wght@200..700&family=Pacifico&display=swap');
 
 /* Reset and Base Styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  
 }
 
 /* Smooth scroll padding adjustment */
@@ -16,6 +22,7 @@ html {
 /* Adjust for fixed header */
 section {
   scroll-margin-top: 100px;
+  text-transform: capitalize;
 }
 
 body {
