make home page h3 headig eidt in  responsive

--- a/style.css
+++ b/style.css
@@ -2216,6 +2216,7 @@ body {
   .hero-content h1 .part3 {
     font-size: 1.8rem;
     margin-bottom: 10px;
+    line-height: 30px;
 
   }
   
@@ -2257,6 +2258,7 @@ body {
   .hero-content h1 .part3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    line-height: 30px;
 
   }
   
