--- a/style.css
+++ b/style.css
@@ -2386,6 +2386,7 @@ body {
   bottom: 30px;
   right: 30px;
   z-index: 1000;
+    text-decoration: none;
 }
 
 .whatsapp-link {
@@ -2400,6 +2401,7 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   transition: all 0.3s ease;
+  text-decoration: none;
 }
 
 .whatsapp-link i {
