--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Oswald:wght@200..700&family=Pacifico&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Oswald:wght@200..700&family=Pacifico&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* Reset and Base Styles */
 * {
@@ -151,7 +152,7 @@ body {
     font-weight: 600;
     font-size: clamp(5.5rem, 10vw, 15.5rem);
     line-height: 1.2;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Poppins", sans-serif;
     margin-bottom: -40px;
 }
 
@@ -1427,14 +1428,14 @@ body {
   color: #4BC2BA;
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .footer-column h4 {
   color: #4BC2BA;
   font-size: 1.2rem;
   margin-bottom: 1rem;
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .footer-column ul {
@@ -2650,4 +2651,11 @@ body {
 #email{
 
   text-transform: lowercase;
+}
+
+
+svg {
+  width: 16px;
+  height: 16px;
+
 }
